if(MSVC)
    add_executable(example_reduce example_reduce.cc)
    target_link_libraries(example_reduce gloo)
    add_executable(example_allreduce example_allreduce.cc)
    target_link_libraries(example_allreduce gloo)

    if(USE_LIBUV)
        add_custom_command(TARGET example_reduce POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${libuv_DLL_PATH}"
                $<TARGET_FILE_DIR:example_reduce>)
    endif()
else()
    add_executable(sagreduce SAG_reduce.cc)
    target_link_libraries(sagreduce gloo)
    add_executable(treereduce tree_reduce.cc)
    target_link_libraries(treereduce gloo)
    add_executable(treebroadcast treebroadcast.cc)
    target_link_libraries(treebroadcast gloo)
    add_executable(sagbroadcast sagbroadcast.cc)
    target_link_libraries(sagbroadcast gloo)
    add_executable(glooreduce gloo_ring_reduce.cc)
    target_link_libraries(glooreduce gloo)
    add_executable(gloobroadcast gloo_tree_broadcast.cc)
    target_link_libraries(gloobroadcast gloo)
    add_executable(looks_like_mpi looks_like_mpi.cc)
    target_link_libraries(looks_like_mpi gloo)
endif()
